fix(styles): explicitly left-align sidebar navigation links to prevent wrapped text centering

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -3,6 +3,7 @@
   display: block !important;
   color: var(--sidebar-fg);
   outline: none !important;
+  text-align: left;
 }
 
 .nav-link:hover {
